Update LEWIN'S GENE XII.html

--- a/Textbooks/LEWIN'S GENE XII/LEWIN'S GENE XII.html
+++ b/Textbooks/LEWIN'S GENE XII/LEWIN'S GENE XII.html
@@ -1,1 +1,17 @@
+<!DOCTYPE html>
+<html>
 
+<head>
+    <meta charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="../../CSS/textbook_ユーキャン.css">
+    <title>LEWIN'S GENE XII</title>
+    <script language="JavaScript">
+        while(true){
+            var password = "";
+            password = prompt('请输入口令:','');
+            if(password != '0320') {
+                alert("口令不正确");}
+            else{
+                break;}}
+    </script>
+</head>
