--- a/Textbooks/LEWIN'S GENE XII/LEWIN'S GENE XII.html
+++ b/Textbooks/LEWIN'S GENE XII/LEWIN'S GENE XII.html
@@ -16,5 +16,6 @@
 </head>
 <body>
     <h1>LEWIN'S GENE XII</h1>
+    <h2>Chapter 1: Genes Are DNA and Encode RNAs and Polypeptides</h2>
 </body>
 </html>
