Update LEWIN'S GENE XII.html

--- a/Textbooks/LEWIN'S GENE XII/LEWIN'S GENE XII.html
+++ b/Textbooks/LEWIN'S GENE XII/LEWIN'S GENE XII.html
@@ -16,5 +16,7 @@
 <body>
     <h1>LEWIN'S GENE XII</h1>
     <h2>Chapter 1: Genes Are DNA and Encode RNAs and Polypeptides</h2>
+    <h3>1.1 Introduction</h3>
+    <p>The hereditary basis of every living organism is its genome, a long sequence of deoxyribonucleic acid (DNA) that provides the complete set of hereditary information carried by the organism as well as its individual cells. The genome includes chromosomal DNA as well as DNA in plasmids and (in eukaryotes) organellar DNA, as found in mitochondria and chloroplasts. We use the term information because the genome does not itself perform an active role in the development of the organism. Rather, the products of expression of nucleotide sequences within the genome determine development. By a complex series of interactions, the DNA sequence directs production of all of the ribonucleic acids (RNAs) and proteins of the organism at the appropriate time and within the appropriate cells. Proteins serve a diverse series of roles in the development and functioning of an organism: they can form part of the structure of the organism; have the capacity to build the structure; perform the metabolic reactions necessary for life; and participate in regulation as transcription factors, receptors, key players in signal transduction pathways, and other molecules.</p>
 </body>
 </html>
