Update LEWIN'S GENE XII.html

--- a/Textbooks/LEWIN'S GENE XII/LEWIN'S GENE XII.html
+++ b/Textbooks/LEWIN'S GENE XII/LEWIN'S GENE XII.html
@@ -21,7 +21,7 @@
     <p>Physically, the genome can be divided into a number of different DNA molecules, or <b>chromosomes</b>. The ultimate definition of a genome is the sequence of the DNA of each chromosome. Functionally, the genome is divided into genes. Each gene is a sequence of DNA that encodes a single type of RNA and, in many cases, ultimately a polypeptide. Each of the discrete chromosomes comprising the genome can contain a large number of genes. Genomes for living organisms might contain as few as about 500 genes (for mycoplasma, a type of bacterium), about 20,000 for humans, or as many as about 50,000 to 60,000 for rice.</p>
     <p>In this chapter, we explore the gene in terms of its basic molecular construction and basic function. <b>FIGURE 1.1</b> summarizes the stages in the transition from the historical concept of the gene to the modern definition of the genome.</p>
     <img src="/figures/f1_1.png" alt="FIGURE 1.1">
-    <p></p>
+    <p>The first definition of the gene as a functional unit followed from the discovery that individual genes are responsible for the production of specific proteins. Later, the chemical differences between the DNA of the gene and its protein product led to the suggestion that a gene encodes a protein. This, in turn, led to the discovery of the complex apparatus by which the DNA sequence of a gene determines the amino acid sequence of a polypeptide.</p>
     <p></p>
     <p></p>
     <p></p>
