Update LEWIN'S GENE XII.html

--- a/Textbooks/LEWIN'S GENE XII/LEWIN'S GENE XII.html
+++ b/Textbooks/LEWIN'S GENE XII/LEWIN'S GENE XII.html
@@ -36,7 +36,7 @@
     <p><b>FIGURE 1.3</b> Each chromosome consists of a single, long molecule of DNA within which are the sequences of individual genes.</p>
     <p>From the demonstration that a gene consists of DNA, and that a chromosome consists of a long stretch of DNA representing many genes, we will move to the overall organization of the genome. In the chapter titled <i>The Interrupted Gene</i>, we take up in more detail the organization of the gene and its representation in proteins. In the chapter titled <i>The Content of the Genome</i>, we consider the total number of genes, and in the chapter titled <i>Clusters and Repeats</i>, we discuss other components of the genome and the maintenance of its organization.</p>
     <h3>1.2 DNA Is the Genetic Material of Bacteria and Viruses</h3>
-    <p>KEY CONCEPTS
+    <p class="black">KEY CONCEPTS
     <li>Bacterial transformation provided the first evidence that DNA is the genetic material of bacteria. We can transfer genetic properties from one bacterial strain to another by extracting DNA from the first strain and adding it to the second strain.<\li>
 <li>Phage infection showed that DNA is the genetic material of some viruses. When the DNA and protein components of bacteriophages are labeled with different radioactive isotopes, only the DNA is transmitted to the progeny phages produced by infecting bacteria.<\li></p>
     <p></p>
