Update LEWIN'S GENE XII.html

--- a/Textbooks/LEWIN'S GENE XII/LEWIN'S GENE XII.html
+++ b/Textbooks/LEWIN'S GENE XII/LEWIN'S GENE XII.html
@@ -37,8 +37,14 @@
     <p>From the demonstration that a gene consists of DNA, and that a chromosome consists of a long stretch of DNA representing many genes, we will move to the overall organization of the genome. In the chapter titled <i>The Interrupted Gene</i>, we take up in more detail the organization of the gene and its representation in proteins. In the chapter titled <i>The Content of the Genome</i>, we consider the total number of genes, and in the chapter titled <i>Clusters and Repeats</i>, we discuss other components of the genome and the maintenance of its organization.</p>
     <h3>1.2 DNA Is the Genetic Material of Bacteria and Viruses</h3>
     <p class="black">KEY CONCEPTS
-    <li>Bacterial transformation provided the first evidence that DNA is the genetic material of bacteria. We can transfer genetic properties from one bacterial strain to another by extracting DNA from the first strain and adding it to the second strain.<\li>
-<li>Phage infection showed that DNA is the genetic material of some viruses. When the DNA and protein components of bacteriophages are labeled with different radioactive isotopes, only the DNA is transmitted to the progeny phages produced by infecting bacteria.<\li></p>
+    <li>Bacterial transformation provided the first evidence that DNA is the genetic material of bacteria. We can transfer genetic properties from one bacterial strain to another by extracting DNA from the first strain and adding it to the second strain.</li>
+    <li>Phage infection showed that DNA is the genetic material of some viruses. When the DNA and protein components of bacteriophages are labeled with different radioactive isotopes, only the DNA is transmitted to the progeny phages produced by infecting bacteria.</li></p>
+    <p>The idea that the genetic material of organisms is DNA has its roots in the discovery of transformation by <b>Frederick Griffith in 1928</b>. The bacterium <i>Streptococcus</i> (formerly <i>Pneumococcus</i>) <i>pneumoniae</i> kills mice by causing pneumonia. The virulence of the bacterium is determined by its capsular polysaccharide, which allows the bacterium to escape destruction by its host. Several types of <i>S. pneumoniae</i> have different capsular polysaccharides, but they all have a smooth “S” appearance. Each of the S types can give rise to variants that fail to produce the capsular polysaccharide and therefore have a rough “R” surface (consisting of the material that was beneath the capsular polysaccharide). The R types are avirulent and do not kill the mice, because the absence of the polysaccharide capsule allows the animal's immune system to destroy the bacteria.</p>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
     <p></p>
     <p></p>
     <p></p>
