Update LEWIN'S GENE XII.html

--- a/Textbooks/LEWIN'S GENE XII/LEWIN'S GENE XII.html
+++ b/Textbooks/LEWIN'S GENE XII/LEWIN'S GENE XII.html
@@ -40,8 +40,9 @@
     <li>Bacterial transformation provided the first evidence that DNA is the genetic material of bacteria. We can transfer genetic properties from one bacterial strain to another by extracting DNA from the first strain and adding it to the second strain.</li>
     <li>Phage infection showed that DNA is the genetic material of some viruses. When the DNA and protein components of bacteriophages are labeled with different radioactive isotopes, only the DNA is transmitted to the progeny phages produced by infecting bacteria.</li></p>
     <p>The idea that the genetic material of organisms is DNA has its roots in the discovery of transformation by <b>Frederick Griffith in 1928</b>. The bacterium <i>Streptococcus</i> (formerly <i>Pneumococcus</i>) <i>pneumoniae</i> kills mice by causing pneumonia. The virulence of the bacterium is determined by its capsular polysaccharide, which allows the bacterium to escape destruction by its host. Several types of <i>S. pneumoniae</i> have different capsular polysaccharides, but they all have a smooth “S” appearance. Each of the S types can give rise to variants that fail to produce the capsular polysaccharide and therefore have a rough “R” surface (consisting of the material that was beneath the capsular polysaccharide). The R types are avirulent and do not kill the mice, because the absence of the polysaccharide capsule allows the animal's immune system to destroy the bacteria.</p>
-    <p></p>
-    <p></p>
+    <p>When S bacteria are killed by heat treatment, they can no longer harm the animal. <b>FIGURE 1.4</b>, however, shows that when heatkilled S bacteria and avirulent R bacteria are jointly injected into a mouse, it dies as the result of a pneumonia infection. Virulent S bacteria can be recovered from the mouse’s blood.</p>
+    <img src="f1_4.png" alt="FIGURE 1.4">
+    <p><b>FIGURE 1.4</b> Neither heat-killed S-type nor live R-type bacteria can kill mice, but simultaneous injection of both can kill mice just as effectively as the live S type.</p>
     <p></p>
     <p></p>
     <p></p>
