--- a/Textbooks/LEWIN'S GENE XII/LEWIN'S GENE XII.html
+++ b/Textbooks/LEWIN'S GENE XII/LEWIN'S GENE XII.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="../../CSS/textbook.css">
     <title>LEWIN'S GENE XII</title>
     <script language="JavaScript">
         while(true){
